deployement/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deno-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mydenoapi
  template:
    metadata:
      labels:
        app: mydenoapi
    spec:
     containers:
     - name: mydenoapi
       image: sheguey888/mydenoapi:latest
       ports:
       - containerPort: 8000
