deployement/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deno-api-service
spec:
  type: NodePort
  selector:
    app: mydenoapi
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    nodePort: 30008
