deployement/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: mydenoapi-ingress

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: hello-deno.info

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: deno-api-service

                port:
                  number: 8000
